Fix pixel perfect for catalog page on mobile

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -12,7 +12,7 @@
 
 .catalog__item {
   border-bottom: 1px solid $border-color-2;
-  padding-bottom: 25px;
+  padding-bottom: 23px;
 
   @include md-size {
     width: 325px;
