--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -5,7 +5,7 @@
   font-weight: 400;
   margin: 0;
   padding-top: 15px;
-  padding-bottom: 35px;
+  padding-bottom: 27px;
 
   @include md-size {
     font-size: 60px;
