--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,6 +1,7 @@
 .product__info {
   display: flex;
   flex-direction: column;
+  width: 140px;
 }
 
 .product__content {
@@ -18,8 +19,8 @@
   color: $black-color-primary;
   text-transform: uppercase;
   font-weight: 400;
-  padding-top: 25px;
-  padding-bottom: 20px;
+  padding-top: 21px;
+  padding-bottom: 13px;
   padding-right: 65px;
   margin: 0;
 
@@ -68,7 +69,6 @@
   padding-bottom: 10px;
   padding-left: 110px;
   padding-right: 110px;
-  margin-top: 10px;
   font-size: 16px;
   line-height: 20px;
 
