--- a/source/sass/blocks/show-more.scss
+++ b/source/sass/blocks/show-more.scss
@@ -44,7 +44,7 @@
   color: $dark-grey-color;
   text-align: center;
   margin: 0;
-  margin-top: 10px;
+  margin-top: 7px;
 
   @include md-size {
     font-size: 16px;
@@ -81,7 +81,7 @@
 
 .show-more__show-all {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 21px;
   font-size: 16px;
   line-height: 20px;
 
